cabal-version: 2.0


name:           xoken-node
version:        1.0.0-alpha
synopsis:       Storage and index for Bitcoin SV
description:    Store blocks, transactions, and balances for Bitcoin or Bitcoin Cash, and make that information via REST API.
category:       Bitcoin, Finance, Network
homepage:       http://github.com/stoichammer/xoken-node#readme
bug-reports:    http://github.com/stoichammer/xoken-node/issues
author:         stoichammer
maintainer:     stoichammer
license:        PublicDomain
license-file:   UNLICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/stoichammer/xoken-node.git



executable xoken-nexa
  main-is: Main.hs
  other-modules:
      Xoken.Node
      Xoken.NodeConfig
      Paths_xoken_node
      Network.Xoken.Node.Data
      Network.Xoken.Node.AriviService
      Network.Xoken.Node.P2P.ChainSync
      Network.Xoken.Node.P2P.Types
      Network.Xoken.Node.Env
      Network.Xoken.Node.GraphDB
      Network.Xoken.Node.P2P.BlockSync
      Network.Xoken.Node.P2P.Common
      Network.Xoken.Node.P2P.PeerManager
      Network.Xoken.Node.XokenService
      Network.Xoken.Node.P2P.UnconfTxSync
      Network.Xoken.Node.Data.Allegory
      Network.Xoken.Node.TLSServer
      Network.Xoken.Node.HTTP.Types
      Network.Xoken.Node.HTTP.Server
      Network.Xoken.Node.HTTP.Handler
      Network.Xoken.Node.Service
      Network.Xoken.Node.Service.Address
      Network.Xoken.Node.Service.Allegory
      Network.Xoken.Node.Service.Block
      Network.Xoken.Node.Service.Chain
      Network.Xoken.Node.Service.Transaction
      Network.Xoken.Node.Service.User

  ghc-options:  -fprof-auto -fprof-cafs -rtsopts -O2 -threaded
  hs-source-dirs:
      app, src

  build-depends:
      aeson
    , aeson-pretty
    , base >=4.9 && <5
    , bytestring
    , cereal
    , conduit
    , containers
    , data-default
    , errors
    , filepath
    , hashable
    , hashable-time
    , http-types
    , monad-logger
    , mtl
    , network
    , nqe
    , optparse-applicative
    , random
    , regex-tdfa
    , resourcet
    , scotty
    , string-conversions
    , text
    , time
    , transformers
    , unliftio
    , unordered-containers
    , vector
    , wai
    , warp
    , xoken-core
    , network-simple
    , monad-loops
    , binary
    , zlib
    , utf8-string
    , base64-bytestring
    , base16-bytestring
    , extra
    , serialise
    , lifted-async
    , stm
    , arivi-crypto
    , arivi-p2p
    , arivi-utils
    , arivi-network
    , string-conv
    , stm-containers
    , directory
    , transformers-base
    , exceptions
    , monad-control
    , cql-io
    , tinylog
    , async
    , streamly
    , lifted-base
    , hasbolt >=0.1.3.6
    , resource-pool
    , cql
    , hashtables
    , base16-bytestring
    , SafeSemaphore
    , yaml
    , secp256k1-haskell
    , concurrent-extra
    , tls
    , x509-store
    , network-simple-tls
    , vformat
    , daemons
    , snap
    , lens
  default-language: Haskell2010

test-suite xoken-node-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
        Xoken.StoreSpec
        Network.Xoken.Node.DataSpec
        Paths_xoken_node
        Network.Xoken.Node.AriviService
        Network.Xoken.Node.Data
        Network.Xoken.Node.Env
        Network.Xoken.Node.GraphDB
        Network.Xoken.Node.P2P.Common
        Network.Xoken.Node.P2P.Types
        Network.Xoken.Node.XokenService
        Network.Xoken.Node.Data.Allegory
        Xoken.Node
        Xoken.NodeConfig

  hs-source-dirs:
      test, src
  build-depends:
      aeson
    , base >=4.9 && <5
    , bytestring
    , cereal
    , conduit
    , containers
    , data-default
    , hashable
    , hspec
    , http-types
    , monad-logger
    , mtl
    , network
    , nqe
    , random
    , resourcet
    , scotty
    , string-conversions
    , text
    , time
    , transformers
    , unliftio
    , unordered-containers
    , vector
    , wai
    , warp
    , xoken-core
    , arivi-crypto
    , arivi-p2p
    , arivi-utils
    , arivi-network
    , SafeSemaphore
    , stm
    , stm-containers
    , resource-pool
    , hasbolt >=0.1.3.6
    , cql
    , cql-io
    , serialise
    , exceptions
    , monad-control
    , tinylog
    , hashtables
    , streamly
    , async
    , lifted-async
    , lifted-base
    , base64-bytestring
    , extra
    , zlib
    , monad-loops
    , utf8-string
    , yaml
    , secp256k1-haskell


  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
